--- a/index.ipynb
+++ b/index.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -30,13 +30,15 @@
        "0.07692307692307693"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Your solution"
+    "# Your solution\n",
+    "P_king = 4/52\n",
+    "P_king"
    ]
   },
   {
@@ -48,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -57,13 +59,27 @@
        "0.3333333333333333"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Your Solution"
+    "# Your Solution\n",
+    "# The posterior probability P(king|Face)can be calculated using Bayes' theorem as\n",
+    "\n",
+    "# P(king|face) = P(face|king)P(king) / P(face)\n",
+    "\n",
+    "#and all kings are face cards \n",
+    "#finally there are 3 face cards in each of 4 suits\n",
+    "\n",
+    "P_face_given_king = 1\n",
+    "P_face = (4*3)/52\n",
+    "\n",
+    "\n",
+    "P_king_given_face = P_king*P_face_given_king/P_face\n",
+    "\n",
+    "P_king_given_face"
    ]
   },
   {
@@ -89,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -98,19 +114,30 @@
        "0.5"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Part 1\n",
-    "# Your solution"
+    "# Your solution\n",
+    "#O is the older child who is a boy\n",
+    "#Y is the younger child who is either a boy or a girl\n",
+    "#we want to know given O=boy, what is the probability that y is also a boy\n",
+    "\n",
+    "p_y = 1/4\n",
+    "p_o = 1/2\n",
+    "p_o_given_y = 1\n",
+    "\n",
+    "\n",
+    "P_y_given_o = p_y*p_o_given_y/p_o\n",
+    "P_y_given_o"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -119,14 +146,20 @@
        "0.3333333333333333"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Part 2 \n",
-    "# Your solution"
+    "# Your solution\n",
+    "#this is the probability that both are boys which is 1-probabiity that both are girls\n",
+    "p_b = 1 - 1/4\n",
+    "p_g_given_y = 1\n",
+    "\n",
+    "p_y_given_b = p_g_given_y*p_y/p_g\n",
+    "p_y_given_b"
    ]
   },
   {
@@ -200,7 +233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
