--- a/index.ipynb
+++ b/index.ipynb
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
        "0.3333333333333333"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,9 +156,9 @@
     "# Your solution\n",
     "#this is the probability that both are boys which is 1-probabiity that both are girls\n",
     "p_b = 1 - 1/4\n",
-    "p_g_given_y = 1\n",
+    "p_b_given_y = 1\n",
     "\n",
-    "p_y_given_b = p_g_given_y*p_y/p_g\n",
+    "p_y_given_b = p_b_given_y*p_y/p_b\n",
     "p_y_given_b"
    ]
   },
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -198,14 +198,41 @@
        "0.5"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Your solution"
+    "# Your solution\n",
+    "\n",
+    "#P(D) = .01\n",
+    "#P(Pos|D)=.99\n",
+    "#P(notPos|notD = .99) therefore P(Pos|notD)=.01\n",
+    "#P(notD)=.99\n",
+    "#given that a patient tested positive, what is the probability they have the disease\n",
+    "\n",
+    "# By Bayes' Theorem, the probability you have the disease is\n",
+    "\n",
+    "#P(D|Pos) = P(Pos|D)* P(D) / P(Pos) \n",
+    "\n",
+    "# P(Pos) is calculated as :\n",
+    "# You either don't have the disease and tested incorrectly() (0.99 *0.1)\n",
+    "# or you do have the disease and tested correctly (0.1*0.99)\n",
+    "\n",
+    "\n",
+    "p_pos = (0.01*0.99) + (0.99 *0.01)\n",
+    "\n",
+    "p_d_given_pos = 0.99 * 0.01/p_pos\n",
+    "p_d_given_pos\n",
+    "\n",
+    "#0.5"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
